--- a/GAC_Web/Swish1o.csproj
+++ b/GAC_Web/Swish1o.csproj
@@ -34,6 +34,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Brettle.Web.NeatUpload, Version=1.3.4034.20191, Culture=neutral, PublicKeyToken=dd134ea1c3727369, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Brettle.Web.NeatUpload.dll</HintPath>
+    </Reference>
+    <Reference Include="Brettle.Web.NeatUpload.GreyBoxProgressBar, Version=1.3.4034.20192, Culture=neutral, PublicKeyToken=dd134ea1c3727369, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Brettle.Web.NeatUpload.GreyBoxProgressBar.dll</HintPath>
+    </Reference>
+    <Reference Include="Brettle.Web.NeatUpload.HashedInputFile, Version=1.1.4034.20192, Culture=neutral, PublicKeyToken=dd134ea1c3727369, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Brettle.Web.NeatUpload.HashedInputFile.dll</HintPath>
+    </Reference>
+    <Reference Include="Brettle.Web.NeatUpload.resources">
+      <HintPath>bin\en-US\Brettle.Web.NeatUpload.resources.dll</HintPath>
+    </Reference>
+    <Reference Include="Hitone.Web.SqlServerUploader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=dd134ea1c3727369, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Hitone.Web.SqlServerUploader.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -66,7 +85,9 @@
     <Content Include="sunny.png" />
     <Content Include="switch5050---1psd.png" />
     <Content Include="Upload-icon1-50x50.png" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -122,6 +143,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="MyModule.cs" />
     <Compile Include="ProcControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
