Changed version number. Now 1.3

--- a/GAC_Web/Swish1o.csproj
+++ b/GAC_Web/Swish1o.csproj
@@ -11,7 +11,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Swish1o</RootNamespace>
-    <AssemblyName>Swish1o</AssemblyName>
+    <AssemblyName>GAC 1.3</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
     <TargetFrameworkProfile />
